deploy/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: webhookery
  labels:
    app.kubernetes.io/name: webhookery
